[gd_scene load_steps=40 format=2]

[ext_resource path="res://WorldAssets/Terrain/Fondo.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/PlayerONE.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ObstaclesOnTheRoad/ObstaclesGenerator1.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Enviroment.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Air.tscn" type="PackedScene" id=5]
[ext_resource path="res://WorldAssets/MenusUI/Filter.png" type="Texture" id=6]
[ext_resource path="res://WorldAssets/MenusUI/ProgressBar/BarValueGreen.png" type="Texture" id=7]
[ext_resource path="res://WorldAssets/MenusUI/ProgressBar/FondoProgressBar.png" type="Texture" id=8]
[ext_resource path="res://WorldAssets/MenusUI/ProgressBar/FrontProgressBar.png" type="Texture" id=9]
[ext_resource path="res://scripts/PlayerIAscripts/Level1IA.gd" type="Script" id=10]
[ext_resource path="res://scenes/IAScenes/PlayertwoIA.tscn" type="PackedScene" id=11]
[ext_resource path="res://Hud/PauseMenu/Pause.png" type="Texture" id=12]
[ext_resource path="res://Hud/PauseMenu/Restart.png" type="Texture" id=13]
[ext_resource path="res://Hud/PauseMenu/Main Menu.png" type="Texture" id=14]
[ext_resource path="res://Hud/PauseMenu/Resume.png" type="Texture" id=15]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=16]
[ext_resource path="res://scenes/Trees_Palm.tscn" type="PackedScene" id=17]
[ext_resource path="res://Hud/WinScreen/ButtonHover.png" type="Texture" id=18]
[ext_resource path="res://Hud/WinScreen/WinScreen.png" type="Texture" id=19]
[ext_resource path="res://Hud/WinScreen/TextVictoryRemindero.png" type="Texture" id=20]
[ext_resource path="res://Audios/AudiosUnderCCbyAttribution4.0/Win_Bassa Island Game Loop.ogg" type="AudioStream" id=21]
[ext_resource path="res://Audios/Wind_524203__filmmakersmanual__forest-wind-04.ogg" type="AudioStream" id=22]
[ext_resource path="res://icon.png" type="Texture" id=23]
[ext_resource path="res://Atkinson-Hyperlegible-Font-Print-and-Web-2020-0514/AtkinsonHyperlegible-Bold.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://Audios/CambioRequest.wav" type="AudioStream" id=25]
[ext_resource path="res://Hud/DirectionIAGoing.png" type="Texture" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 204, 552.75 )

[sub_resource type="NavigationPolygon" id=9]
vertices = PoolVector2Array( 683, 138, 747, 111, 743, 172, -574, 107, -519, 50, -445, 126, -580, 158, -283, 126, -131, 128, 21, 132, 335, 146, 177, 134, 265, 86, 105, 84, 423, 94, 508, 149, -55, 84, -195, 88, -357, 86, 599, 100 )
polygons = [ PoolIntArray( 0, 1, 2 ), PoolIntArray( 3, 4, 5, 6 ), PoolIntArray( 2, 6, 5, 7, 8, 9, 10 ), PoolIntArray( 11, 12, 10 ), PoolIntArray( 9, 13, 11 ), PoolIntArray( 10, 14, 15 ), PoolIntArray( 8, 16, 9 ), PoolIntArray( 7, 17, 8 ), PoolIntArray( 5, 18, 7 ), PoolIntArray( 15, 19, 0, 2 ), PoolIntArray( 10, 15, 2 ), PoolIntArray( 10, 9, 11 ) ]
outlines = [ PoolVector2Array( -580, 158, 743, 172, 747, 111, 683, 138, 599, 100, 508, 149, 423, 94, 335, 146, 265, 86, 177, 134, 105, 84, 21, 132, -55, 84, -131, 128, -195, 88, -283, 126, -357, 86, -445, 126, -519, 50, -574, 107 ) ]

[sub_resource type="Animation" id=2]
resource_name = "PauseHide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "PauseShown"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "WinAnim"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "GoalReminderAnim"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextVictoryRemindero:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.895631, 0.9, 1.1, 1.3, 1.7, 1.9, 2.1, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextVictoryRemindero:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 36
font_data = ExtResource( 24 )

[sub_resource type="Animation" id=11]
resource_name = "CambioDirectionIA"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, -1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "ChangeRedUp"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="World1" type="Node2D"]
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 540 )

[node name="Fondo" type="Sprite" parent="Sprite"]
modulate = Color( 1, 1, 1, 0.380392 )
texture = ExtResource( 1 )

[node name="BackgroundBack" parent="." instance=ExtResource( 4 )]
velocityBackground = 2.268

[node name="StaticBody2D" type="Area2D" parent="."]
position = Vector2( 48, -83 )
scale = Vector2( 1.04859, 1.20336 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 22, 546 )
shape = SubResource( 1 )

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="StaticBody2D"]

[node name="StaticBody2D2" type="Area2D" parent="."]
position = Vector2( 1832, -79 )
scale = Vector2( 1.02202, 1.15016 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 22, 546 )
shape = SubResource( 1 )

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="StaticBody2D2"]

[node name="StaticBody2D3" type="Area2D" parent="."]
position = Vector2( -92, 1377 )
rotation = -1.57079
scale = Vector2( 1.01428, 1.90369 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 22, 546 )
shape = SubResource( 1 )

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="StaticBody2D3"]

[node name="StaticBody2D4" type="Area2D" parent="."]
position = Vector2( -87, -227 )
rotation = -1.57079
scale = Vector2( 1.01428, 1.90369 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( 22, 546 )
shape = SubResource( 1 )

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="StaticBody2D4"]

[node name="IAPositionFront" type="Sprite" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2( 953, 173 )
texture = ExtResource( 23 )

[node name="IAPositionBack" type="Sprite" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2( 1573, 89 )
texture = ExtResource( 23 )

[node name="Navigation2D" type="Navigation2D" parent="."]
edge_connection_margin = 20.0

[node name="ObstaclesSpawner" parent="Navigation2D" instance=ExtResource( 3 )]
difficulty = 3
ObstaclesVelocity = 1.4

[node name="NavigationPolygonInstance2" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( 883, 858 )
navpoly = SubResource( 9 )

[node name="PlayerONE" parent="Navigation2D" instance=ExtResource( 2 )]
position = Vector2( 599, 609 )
scale = Vector2( 1.5, 1.5 )

[node name="PlayerONE2" parent="Navigation2D" instance=ExtResource( 11 )]
position = Vector2( 1275, 609 )
scale = Vector2( 1.5, 1.5 )
path_to_player = NodePath("../../IAPositionBack")

[node name="Filter" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.764706 )
light_mask = 0
position = Vector2( 958, 545 )
scale = Vector2( 4.031, 4.129 )
texture = ExtResource( 6 )

[node name="Palms_Trees" parent="." instance=ExtResource( 17 )]
palmAnimVelocity = 1.9

[node name="Air" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.501961 )
light_mask = 32
position = Vector2( -519, -8 )
scale = Vector2( 1.68, 1.688 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true

[node name="Node2D" type="Node2D" parent="."]

[node name="FondoProgressBar" type="Sprite" parent="Node2D"]
position = Vector2( 955, 1016 )
scale = Vector2( 0.795, 0.8775 )
texture = ExtResource( 8 )

[node name="Bar" type="Node2D" parent="Node2D"]
position = Vector2( 478, 1045 )

[node name="BarValueGreen" type="Sprite" parent="Node2D/Bar"]
scale = Vector2( 0.798, 1 )
texture = ExtResource( 7 )
offset = Vector2( 597.484, 1.13977 )

[node name="ProgressBar" type="Sprite" parent="Node2D"]
modulate = Color( 1, 1, 1, 0.643137 )
position = Vector2( 955, 1016 )
scale = Vector2( 0.795, 0.8775 )
texture = ExtResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.25
autostart = true

[node name="PauseMenu" type="Node2D" parent="."]
pause_mode = 2
position = Vector2( 960, 540 )
scale = Vector2( 1.01, 1.01 )
z_index = 7
script = ExtResource( 16 )

[node name="Background" type="Sprite" parent="PauseMenu"]
visible = false
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 12 )

[node name="Resume" type="TextureButton" parent="PauseMenu/Background"]
margin_left = -220.792
margin_top = -266.337
margin_right = 224.208
margin_bottom = -183.337
texture_hover = ExtResource( 15 )

[node name="Restart" type="TextureButton" parent="PauseMenu/Background"]
margin_left = -202.97
margin_top = -121.782
margin_right = 242.03
margin_bottom = -38.7822
texture_hover = ExtResource( 13 )

[node name="MainMenu" type="TextureButton" parent="PauseMenu/Background"]
margin_left = -302.97
margin_top = 12.8713
margin_right = 304.03
margin_bottom = 106.871
texture_hover = ExtResource( 14 )

[node name="UIanims" type="AnimationPlayer" parent="PauseMenu"]
anims/PauseHide = SubResource( 2 )
anims/PauseShown = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Start" type="Node2D" parent="."]

[node name="WinScreenMenu" type="Node2D" parent="."]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0 )
z_index = 2

[node name="Node2D" type="Node2D" parent="WinScreenMenu"]
position = Vector2( 960, 540 )

[node name="WinScreen" type="Sprite" parent="WinScreenMenu"]
position = Vector2( 960, 540 )
texture = ExtResource( 19 )

[node name="TextureButton" type="TextureButton" parent="WinScreenMenu"]
margin_left = 663.0
margin_top = 623.0
margin_right = 1252.0
margin_bottom = 987.0
texture_hover = ExtResource( 18 )

[node name="TextVictoryRemindero" type="Sprite" parent="WinScreenMenu"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 967, 485 )
texture = ExtResource( 20 )

[node name="WinAnim" type="AnimationPlayer" parent="WinScreenMenu"]
anims/RESET = SubResource( 5 )
anims/WinAnim = SubResource( 6 )

[node name="TextBlinkAnim" type="AnimationPlayer" parent="WinScreenMenu"]
playback_speed = 0.5
anims/GoalReminderAnim = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="WinningSound" type="AudioStreamPlayer" parent="WinScreenMenu"]
stream = ExtResource( 21 )

[node name="Wind" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 996, 1 )
stream = ExtResource( 22 )
volume_db = 9.816
pitch_scale = 0.92
autoplay = true
max_distance = 40000.0

[node name="Label" type="Label" parent="."]
margin_left = 77.0
margin_top = 98.0
margin_right = 605.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 10 )
text = "Press Shift to change position."

[node name="CambioRequest" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -8.273

[node name="Node2D2" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.631373 )
position = Vector2( 278, 337 )

[node name="DirectionIaGoing" type="Sprite" parent="Node2D2"]
texture = ExtResource( 26 )

[node name="DirectionIaGoing2" type="Sprite" parent="Node2D2"]
position = Vector2( 1369, 0 )
texture = ExtResource( 26 )

[node name="CambioArrowsAnim" type="AnimationPlayer" parent="Node2D2"]
anims/CambioDirectionIA = SubResource( 11 )
anims/ChangeRedUp = SubResource( 12 )
anims/RESET = SubResource( 13 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="PauseMenu/Background/Resume" to="PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/Background/Restart" to="PauseMenu" method="_on_Restart_pressed"]
[connection signal="pressed" from="PauseMenu/Background/MainMenu" to="PauseMenu" method="_on_MainMenu_pressed"]
[connection signal="pressed" from="WinScreenMenu/TextureButton" to="." method="_on_TextureButton_pressed"]
